--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Website</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>Welcome to my website!</h1>
+  <p>This is a basic website.</p>
+  <p>Hello, world!</p> 
+</body>
+</html>
